FIX 113416 Right align of the combo pull-down arrow when @conditions

--- a/skins/default/form.css
+++ b/skins/default/form.css
@@ -80,6 +80,7 @@ td.class {
       height: 22px;
       margin-left: -14px !important;
       position: absolute;
+      right: 0;
       top: 2px;
       width: 14px; }
 
